@startuml
skinparam linetype ortho
skinparam packageStyle rectangle

package "Presentation Layer" #E8F5E9 {
    class "UI Modules" as UI {
        MainActivity
        Dashboard
        System
        Network
        Tools
    }
}

package "Application Layer" #E1F5FE {
    class InfoUseCase <<UseCase>>
}

package "Domain Layer" #FEFECE {
    interface IDeviceRepository <<Interface>>
    class "Domain Models" as Models {
        DeviceInfo
        Enums (Status/Mapping)
    }
}

package "Infrastructure Layer" #FFF9C4 {
    class InfoRepositoryImpl
    class InfoService <<Android Service>>
}

' High-level flow
UI --> InfoUseCase : "Requests actions"
InfoUseCase --> IDeviceRepository : "Orchestrates"
InfoRepositoryImpl ..|> IDeviceRepository : "Fulfills"
InfoRepositoryImpl --> InfoService : "Queries device state"

@enduml
